@@ -13,6 +13,9 @@ import org.springframework.data.redis.core.RedisTemplate;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 @Service
 public class RecommendService {
     private final UserRepository userRepository;
@@ -34,19 +37,19 @@ public class RecommendService {
         this.redisTemplate = redisTemplate;
     }
 
-    public List<Book> getRecommendations(String userId) {
+    private static final Logger log = LoggerFactory.getLogger(RecommendService.class);
+
     public List<BookDto> getRecommendations(String userId) {
         String redisKey = REDIS_KEY_PREFIX + userId;
 
-        // Redis에서 캐싱된 추천 결과 확인
-        List<Book> cachedRecommendations = redisTemplate.opsForValue().get(redisKey);
-        if (cachedRecommendations != null) {
         // Redis에서 캐싱된 추천 결과 확인 - 있으면 바로 응담, 없으면 추천 요청
         List<BookDto> cachedRecommendations = redisTemplate.opsForValue().get(redisKey);
             return cachedRecommendations;
         }
 
-        // JWT 토큰에서 추출한 사용자 조회
+        log.info("[CACHE MISS] Redis에 추천 없음. Kafka로 추천 요청 예정 - userId={}", userId);
+
+        // JWT 토큰에서 사용자 추출
         User user = userRepository.findByUserId(userId)
                 .orElseThrow(() -> new RuntimeException("사용자가 존재하지 않습니다."));
 
@@ -58,17 +61,32 @@ public class RecommendService {
                 .map(BookDto::from)
                 .collect(Collectors.toList());
 
-        books.addAll(rentalRepository.findByUser(user).stream()
+        log.info("구매한 책 수: {}, 목록: {}", purchasedBooks.size(),
+                purchasedBooks.stream().map(BookDto::getTitle).toList());
+
+        // 사용자의 대여 도서 조회
+        List<BookDto> rentedBooks = rentalRepository.findByUser(user).stream()
                 .map(Rental::getBook)
-                .collect(Collectors.toList()));
+                .map(BookDto::from)
+                .collect(Collectors.toList());
+
+        log.info("대여한 책 수: {}, 목록: {}", rentedBooks.size(),
+                rentedBooks.stream().map(BookDto::getTitle).toList());
+
+        // 전체 도서 목록
+        List<BookDto> books = purchasedBooks;
+        books.addAll(rentedBooks);
 
         if (books.isEmpty()) {
-            throw new RuntimeException(userId + "사용자가 대여하거나 구매한 책이 없습니다.");
+            log.warn("추천할 책이 없음 - userId={}", userId);
+            throw new RuntimeException(userId + " 사용자가 대여하거나 구매한 책이 없습니다.");
         }
+
+        log.info("Kafka로 추천 요청 전송 - userId={}, 총 책 수={}", userId, books.size());
 
         // Kafka로 추천 요청 전송
         kafkaProducerService.sendBooksForRecommendation(userId, books);
 
-        return List.of(); // Kafka 결과를 기다려야 하므로 빈 리스트 반환
+        return List.of(); // Kafka 응답은 비동기 처리
     }
 }
